--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible</li>
-	<li>Kubernetes<li>
+        <li>Ansible: Infraestrutura como código</li>
+	<li>Kubernetes: Introdução a orquestração de containers<li>
         <li>Integração Contínua: Alteracao</li>
     </ul>
 </body>
